--- a/Scanning/Scanning/My Project/Resources.resx
+++ b/Scanning/Scanning/My Project/Resources.resx
@@ -184,9 +184,6 @@
   <data name="house" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>house.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="assisstant" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\assisstant.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="background2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\background2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -267,5 +264,8 @@
   </data>
   <data name="wideP__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>wideP (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="assisstant" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>assisstant.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
