--- a/Scanning/Scanning/My Project/Resources.resx
+++ b/Scanning/Scanning/My Project/Resources.resx
@@ -295,6 +295,9 @@
   <data name="urgent__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\urgent (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="toiletButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>toiletButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="_call" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>call.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
